2nd training/Community/Community/Community1/force-app/main/default/objects/Depositors__c/Depositors__c.object-meta.xml
<CustomObject>
    <label>Depositor</label>
    <nameField>
        <label>Depositors Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Depositors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>