2nd training/Community/Community/Community1/force-app/main/default/objects/Depositors__c/fields/Contact_No__c.field-meta.xml
<CustomField>
    <fullName>Contact_No__c</fullName>
    <label>Contact No.</label>
    <required>true</required>
    <type>Phone</type>
</CustomField>