2nd training/Community/Community/Community1/force-app/main/default/objects/Depositors__c/fields/Personal_ID__c.field-meta.xml
<CustomField>
    <fullName>Personal_ID__c</fullName>
    <label>Personal ID</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>