2nd training/Community/Community/Community1/force-app/main/default/objects/Depositors__c/fields/Storage__c.field-meta.xml
<CustomField>
    <fullName>Storage__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Storage</label>
    <referenceTo>Storage__c</referenceTo>
    <relationshipLabel>Depositors</relationshipLabel>
    <relationshipName>Depositors</relationshipName>
    <type>Lookup</type>
</CustomField>